--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -19,41 +19,28 @@
     </div>
     <div class="div2">
 
-        <div class="dropdown x11">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Gibstone
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#"><b>Overall Score:</b> <i><%=player1Var%></i></a></li>
-            </ul>
-          </div>
+      <video autoplay muted loop id="video-background">
+        <source src="/VS Backgroun.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+    </video>
 
-          <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              BajaMike
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#"><b>Overall Score:</b> <i><%=player2Var%></i></a></li>
-            </ul>
-          </div>
-
-          <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              eatsomecake
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#"><b>Overall Score:</b> <i><%=player3Var%></i></a></li>
-            </ul>
-          </div>
-
-          <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Gibstone
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#"><b>Overall Score:</b> <i><%=player4Var%></i></a></li>
-            </ul>
-          </div>
+    <% players.forEach(function(player) { %>
+      <div class="dropdown x11 css-selector">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <%= player.name %>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#"><b>Account ID:</b> <i><%= player.accountId %></i></a></li>
+          <li><a class="dropdown-item" href="#"><b>Rounds Played:</b> <i><%= player.roundsPlayed %></i></a></li>
+          <li><a class="dropdown-item" href="#"><b>Total Damage:</b> <i><%= player.overallDamage %></i></a></li>
+          <li><a class="dropdown-item" href="#"><b>Total Kills:</b> <i><%= player.totalKills %></i></a></li>
+          <% // Include additional stats here if needed %>
+        </ul>
+      </div>
+    <% }); %>
+    
+          
+        
 
           
 
