--- a/public/style.css
+++ b/public/style.css
@@ -1,35 +1,22 @@
-.css-selector {
-    background: linear-gradient(270deg, #000000, #3c1e00);
-    background-size: 400% 400%;
 
-    -webkit-animation: AnimationName 13s ease infinite;
-    -moz-animation: AnimationName 13s ease infinite;
-    animation: AnimationName 13s ease infinite;
+#video-background {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100; /* Ensure video stays in the background */
+    background-size: cover;
 }
-
-@-webkit-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@-moz-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-
-
 body{
     background-color: rgb(0, 0, 0) !important;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 80px;
+    background-color: transparent !important;
 }
 h1{
     color: white;
@@ -83,8 +70,8 @@ button{
     right: 0px;
     top: 100px;
     border-radius: 20px;
-    border: 1px solid orangered;
     margin-right: 20px;
+    background-color: #00000060;
 }
 h2{
     font-family: 'Bungee Spice', sans-serif;
@@ -115,13 +102,22 @@ ul{
 }
 .dropdown{
     margin-left: 40px;
+    background-color: red !important;
 }
 .dropdown-toggle{
     background-color: rgb(0, 0, 0) !important;
     border: 1px solid rgb(48, 20, 0) !important;
 }
+/* Targets dropdown menu items */
+.dropdown-menu .dropdown-item:hover, .dropdown-menu .dropdown-item:focus {
+    background-color: transparent; /* Removes the hover background color */
+    color: #000; /* Optional: change text color on hover if needed */
+}
+
 .dropdown-menu{
     background-color: #000000 !important;
+    height: fit-content !important;
+    border: solid 1px rgba(255, 166, 0, 0.301) !important;
 }
 .dropdown-item{
     color: white !important;
@@ -159,4 +155,7 @@ ul{
     .x11{
         width: fit-content;
     }
+}
+.x11{
+    margin-bottom: 15px;
 }
